src/assets/scss/partials/header.scss
.navbar-landing {
    margin-bottom: -90px;
    margin-top: 30px;
    position: relative;
    z-index: $zindex-navbar;

    @media screen and (max-width: $screen-xs-max) {
        .btn-transparent.navbar-btn {
            max-width: 44%;
        }
        .navbar-brand {
            max-width: 27%;
            padding: 20px 7px;
        }
    }
}

.navbar-btn {
    margin-top: 9px !important;
    margin-bottom: 9px !important;
}

.navbar-logo {
    margin-top: 18px;
    width: 44px;
}

.navbar.navbar-sticky {
    position: sticky;
    top: 0;
    margin-top: -96px;
    z-index: $zindex-navbar;
}

.navbar.navbar-sticky:after {
    position: absolute;
    height: 10px;
    width: 100%;
    top: 60;
    background: linear-gradient(180deg, rgba(216, 216, 216, 0.2) 0%, rgba(216, 216, 216, 0) 100%);
    transition: opacity 0.2s ease-out;
    opacity: 0;
}

.navbar.navbar-sticky.navbar-stick:after {
    opacity: 1;
}

.nav.navbar-nav {
    > li > a {
        padding-left: 16px;
        padding-right: 16px;
    }
}

.navbar a {
    outline: none;
}

body.with-sticky-navbar {
    padding-top: 100px;
}

.navbar-center {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

.navbar-toggle .close {
    font-size: 30px;
    line-height: 14px;
}

.navbar-mobile-visible {
    display: none;
}

.navbar-mobile-visible-sticky {
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.2s ease-out;
}

.navbar.navbar-stick {
    .navbar-mobile-visible-sticky {
        opacity: 1;
        pointer-events: auto;
    }
}

ul.navbar-mobile-menu {
    text-align: center;
    display: none;

    li {
        font-family: $headings-font-family;
        font-size: $font-size-h3;
        margin-bottom: 20px;
    }
}

body.navbar-mobile-active {
    overflow: hidden;

    .navbar-mobile-hidden {
        display: none;
    }
    .navbar-header {
        min-height: 100vh;
    }
    .navbar-mobile-visible {
        display: block;
    }
    .navbar-transparent {
        margin-top: 0;
    }
}

.navbar.navbar-transparent {
    border-top: none;
    transition: background 0.25s ease-in-out;

    .navbar-toggle .icon-bar {
        background-color: #fff;
    }

    .btn.btn-default {
        @include button-explicit(
            $btn-default-color,
            $btn-default-bg,
            transparent,

            $brand-primary,
            $btn-default-bg,
            transparent,

            $brand-primary,
            lighten($brand-primary, 50%),
            transparent
        );
    }

    .btn-primary {
        @include button-explicit(
            $btn-primary-color,
            $btn-primary-bg,
            $btn-primary-border,

            $btn-primary-color,
            darken($btn-primary-bg, 10%),
            darken($btn-primary-bg, 10%),

            $btn-primary-color,
            darken($btn-primary-bg, 20%),
            darken($btn-primary-bg, 20%)
        );
    }

    .nav a {
        color: rgba(255, 255, 255, 1);

        &:hover,
        &:focus {
            background-color: transparent;
            color: rgba(255, 255, 255, 0.8);
        }
    }

    &:after {
        background: none;
    }

    .hidden-sticky {
        display: block;
    }

    .visible-sticky {
        display: none;
    }

    &.navbar-stick {
        background: #fff;

        .hidden-sticky {
            display: none !important;
        }

        .visible-sticky {
            display: block !important;
        }

        .navbar-toggle .icon-bar {
            background-color: #000;
        }

        .nav a {
            color: $gray-light;

            &:hover,
            &:focus {
                color: #333;
            }
        }
    }
}

